<resources>
    <string name="app_name">Healthy Weight Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="webclient_id">1004741036792-56g6qmf0msvtj8klq8cks7hv9k7rm8jl.apps.googleusercontent.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="GoogleSignIn">Sign In With Google</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="EnterEmail">Enter E-mail…</string>
    <string name="EnterPassword">Enter Password…</string>
    <string name="LoginOrRegister">Login or Register with your E-mail</string>

    <string name="HomePage">Home Page</string>
    <string name="UserProfile">User Profile</string>
    <string name="Friends">Friends</string>
    <string name="Chats">Chats</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="Statistics">Statistics</string>
    <string name="Weight">Weight</string>
    <string name="LogOut">Log Out</string>
    <string name="UserNameNotFound">User Name not found</string>
    <string name="EmailNotFound">Email not found</string>

    <string name="AddWeight">Add Weight</string>
    <string name="RemoveLast">Remove Last</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="EnterWeight">Enter weight</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="aboutMe">About me</string>
    <string name="currentWeight">Current weight:</string>

    <string name="reportAbuse">Report Abuse</string>
    <string name="reasonReport">Select the reason for the report</string>
    <string name="weightInfo">Weight Information</string>
    <string name="close">Close</string>
    <string-array name="reportReasons">
        <item>Spam</item>
        <item>Racism,Sexism, or Discrimination</item>
        <item>Illegal Activity</item>
        <item>Hate speech, Violence, or Threats</item>
        <item>Scamming, Fraud, or Pyramid marketing</item>
        <item>Spreading Eating Disorders</item>
        <item>Other</item>
    </string-array>

    <string-array name="objectives">
        <item>gain</item>
        <item>lose</item>
        <item>maintain</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="OrRegister">Or register with ...</string>
    <string name="DisplayName">Display Name</string>
    <string name="EnterDisplayName">Enter Display Name ...</string>
    <string name="DisplayNameNotFound">Display name not found</string>
    <string name="EnterFriendName">Enter Friend Name ...</string>
    <string name="objective">Objective</string>
    <string name="lookingToMeet">Looking to meet?</string>
    <string name="EditProfile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="EnterChatHere">Enter Chat Here...</string>
    <string name="FindFriends">Find Friends</string>
</resources>