<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userprofile.UserProfileEditFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_edit_profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DisplayName"
        />

    <EditText
        android:id="@+id/et_edit_profile_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:inputType= "text" />

    <TextView
        android:id="@+id/text_edit_profile_aboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMe"
        />

    <EditText
        android:id="@+id/et_edit_profile_aboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType= "text"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_edit_profile_objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objective"
        />

    <Spinner
        android:id="@+id/spinner_edit_profile_objective"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button_edit_profile_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_edit_profile_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>