<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navMenuHome">

    <fragment
        android:id="@+id/navMenuHome"
        android:name="com.psyma17.healthyweightapplication.ui.home.HomeFragment"
        android:label="@string/HomePage"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navMenuHome_to_navMenuUserProfile"
            app:destination="@id/navMenuUserProfile" />
        <action
            android:id="@+id/action_navMenuHome_to_navMenuFriends"
            app:destination="@id/navMenuFriends" />
        <action
            android:id="@+id/action_navMenuHome_to_navMenuWeight"
            app:destination="@id/navMenuWeight" />
    </fragment>

    <fragment
        android:id="@+id/navMenuUserProfile"
        android:name="com.psyma17.healthyweightapplication.ui.userprofile.UserProfileFragment"
        android:label="@string/UserProfile"
        tools:layout="@layout/fragment_userprofile" >
        <action
            android:id="@+id/action_navMenuUserProfile_to_navMenuHome"
            app:destination="@id/navMenuHome" />
        <action
            android:id="@+id/action_navMenuUserProfile_to_userProfileEditFragment"
            app:destination="@id/userProfileEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/navMenuWeight"
        android:name="com.psyma17.healthyweightapplication.ui.weight.WeightFragment"
        android:label="@string/Weight"
        tools:layout="@layout/fragment_weight" >
        <action
            android:id="@+id/action_navMenuWeight_to_navMenuHome"
            app:destination="@id/navMenuHome" />
    </fragment>
    <fragment
        android:id="@+id/navMenuFriends"
        android:name="com.psyma17.healthyweightapplication.ui.friend.FriendFragment"
        android:label="@string/Friends"
        tools:layout="@layout/fragment_friend" >
        <action
            android:id="@+id/action_navMenuFriends_to_navMenuHome"
            app:destination="@id/navMenuHome" />
    </fragment>
    <fragment
        android:id="@+id/userProfileEditFragment"
        android:name="com.psyma17.healthyweightapplication.ui.userprofile.UserProfileEditFragment"
        android:label="fragment_user_profile_edit"
        tools:layout="@layout/fragment_user_profile_edit" >
        <action
            android:id="@+id/action_userProfileEditFragment_to_navMenuUserProfile"
            app:destination="@id/navMenuUserProfile" />
    </fragment>
</navigation>